--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,2 +1,2 @@
-github: mgineer85
-custom: ["https://paypal.me/MichaelGroene", "https://www.amazon.de/hz/wishlist/ls/1PKWT16S44W8X"]
+github: GiraldoNainggolan
+custom: ["https://paypal.me/GiraldoNainggolan", "BCA: 4830475431"]
